@@ -31,6 +31,7 @@
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <sys/time.h>
+#include <time.h>
 #include <unistd.h>
 #include "config_parser.h"
 #include "cpufreq_utils.h"
@@ -78,6 +79,41 @@ static struct cpufreqd_conf default_configuration = {
 	.print_version		= 0,
 };
 struct cpufreqd_conf *configuration;
+
+/*
+ * Try to read current kernel version.
+ */
+static int get_kversion(void) {
+	FILE *fp;
+	char kver[256];
+	int f = 0;
+
+	fp = fopen ("/proc/version", "r");
+	if (!fp) {
+		clog(LOG_ERR, "/proc/version: %s\n", strerror(errno));
+		return -1;
+	}
+	do {
+		f = fscanf (fp, "Linux version %s", kver);
+	} while (f != 1);
+	fclose(fp);
+	kver[255] = '\0';
+
+	clog(LOG_INFO, "read kernel version %s.\n", kver);
+
+	if (strstr(kver, "2.6") == kver) {
+		clog(LOG_DEBUG, "kernel version is 2.6.\n");
+		return KERNEL_VERSION_26;
+	} else if (strstr(kver, "2.4") == kver) {
+		clog(LOG_DEBUG, "kernel version is 2.4.\n");
+		return KERNEL_VERSION_24;
+	} else {
+		clog(LOG_WARNING, "Unknown kernel version, assuming a 2.6 kernel.\n");
+		return KERNEL_VERSION_26;
+	}
+
+}
+
 
 /*
  * Evaluates the full rule and returns the percentage score
@@ -182,6 +218,7 @@ static int cpufreqd_set_profile (struct profile *old, struct profile *new) {
 				old!=NULL? &old->policy : NULL, &new->policy);
 	}
 	current_profile = new;
+	cpufreqd_info->cur_policy = &new->policy;
 	return 0;
 }
 
@@ -376,6 +413,13 @@ static struct rule *cpufreqd_loop(struct cpufreqd_conf *conf, struct rule *curre
 		clog(LOG_DEBUG, "Rule unchanged (\"%s\"), doing nothing.\n", 
 				current->name);
 	}
+	if (gettimeofday(&cpufreqd_info->timestamp, NULL) < 0) {
+		clog(LOG_ERR, "Couldn't read current time: %s\n", strerror(errno));
+	} else {
+		clog(LOG_DEBUG, "Current time is: %lu::%lu\n",
+				cpufreqd_info->timestamp.tv_sec,
+				cpufreqd_info->timestamp.tv_usec);
+	}
 	return best_rule;
 }
 
@@ -482,7 +526,7 @@ static void execute_command(int sock, struct cpufreqd_conf *conf) {
 }
 
 
-struct cpufreqd_info const * get_cpufreqd_info (void) {
+struct cpufreqd_info * get_cpufreqd_info (void) {
 	return cpufreqd_info;
 }
 
@@ -569,6 +613,9 @@ int main (int argc, char *argv[]) {
 	signal_action.sa_handler = pipe_handler;
 	sigaction(SIGPIPE, &signal_action, 0);
 
+	/* read kernel version */
+	cpufreqd_info->kernel_version = get_kversion();
+	
 	/*
 	 *  read how many cpus are available here
 	 */
